--- a/src/styles/ConfirmationBox.module.scss
+++ b/src/styles/ConfirmationBox.module.scss
@@ -39,10 +39,6 @@
         justify-content: center;
         cursor: pointer;
         transition: 0.1s ease color;
-
-        &:hover {
-            color: #212529;
-        }
     }
 
     .confirmMsg {
@@ -111,5 +107,11 @@
                 font-size: 1rem;
             }
         }
+    }
+}
+
+@media(hover: hover) {
+    .closeButton:hover {
+        color: #212529;
     }
 }
