--- a/src/styles/SettingsCategories.module.scss
+++ b/src/styles/SettingsCategories.module.scss
@@ -40,10 +40,6 @@
 	justify-content: center;
 	cursor: pointer;
 	transition: 0.1s ease color;
-
-	&:hover {
-		color: #212529;
-	}
 }
 
 .catPanel {
@@ -103,11 +99,6 @@
 							background-color: whitesmoke;
 						}
 
-						&:enabled:hover {
-							background-color: #777777;
-							color: whitesmoke;
-						}
-
 						svg {
 							display: block;
 						}
@@ -124,11 +115,6 @@
 			border: 1px solid #212529;
 			cursor: pointer;
 			transition: 0.3s ease background-color, color;
-
-			&:hover {
-				background-color: #212529;
-				color: whitesmoke;
-			}
 		}
 	}
 
@@ -316,5 +302,23 @@
 				}
 			}
 		}
+	}
+}
+
+@media(hover: hover) {
+	.closeButton:hover {
+		color: #212529;
+	}
+
+	.buttonGroup {
+		button:enabled:hover {
+			background-color: #777777;
+			color: whitesmoke;
+		}
+	}
+
+	.addBtn:hover {
+		background-color: #212529;
+		color: whitesmoke;
 	}
 }
