--- a/src/styles/TaskStatus.module.scss
+++ b/src/styles/TaskStatus.module.scss
@@ -12,11 +12,6 @@
     cursor: pointer;
     transition: 0.2s ease background-color, color;
 
-    &:hover {
-        background-color: #212529;
-        color: white;
-    }
-
     .statusTitle {
         margin: 0 0.375rem;
     }
@@ -101,5 +96,12 @@
 
     .filterTitle {
         font-size: 1.2rem;
+    }
+}
+
+@media(hover: hover) {
+    .status:hover {
+        background-color: #212529;
+        color: white;
     }
 }
